# data_systems

./: README.md  api_key.env  config.py  dockerfile  local_daily.env  makefile  readme.md
EOD_Data/: .gitignore  Makefile  TA_addon.py  api_key.env  api_response.py  config.py  dim_symbol_api.py  dim_timestamp.py  dockerfile  local_backfill.env  local_daily.env  pyproject.toml  run.py  settings.env  today_date.py
EOD_Data/azure_comp/: azure_config.py  azure_sql.py  azure_sql_BACKUP.py  azure_sql_backup.py  conn.env  connection.py
EOD_Data/azure_conn/: azure_config.py  conn.env  connection.py
azure_conn/: Makefile  config.py  conn.env  pyproject.toml  run.py
data_transform/: Makefile  config.py  pyproject.toml  run.py  settings.env  transform.py  utils.py
docker-compose/: docker-backfill.yml  docker-daily.yml  makefile
edgar/: Makefile  auth_key.env  backfill.env  config.py  pyproject.toml  run.py  settings.env
